Started to add glTF preview to the web interface

--- a/doc_generator/server/test_page.html
+++ b/doc_generator/server/test_page.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="row">
-            <button id="generate" name="generate" class="button-primary" onclick="trigger_orchestration();">GENERATE</button>
+            <button id="generate" name="generate" class="button-primary" onclick="validate_form();">GENERATE</button>
         </div>
         <div class="row">
             <div id="spinner"></div>
